# disko

./: CMakeLists.txt
include/: command.hpp  commandhandler.hpp  config.hpp  logger.hpp
include/commands/: ping.hpp
src/: commandhandler.cpp  config.cpp  logger.cpp  main.cpp
src/commands/: ping.cpp
